# Vigil

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  config.toml
.cargo/: config.toml
.github/workflows/: ci.yml
Vigil/: Cargo.toml  build.rs  config.toml
Vigil/src/: alerts.rs  cli.rs  config.rs  endpoint.rs  engine.rs  etw.rs  handles.rs  main.rs  notify.rs  process.rs  siem.rs  wintrust.rs
Vigil/src/output/: alerts.rs  endpoint.rs  mod.rs  notify.rs  siem.rs
Vigil/src/runtime/: engine.rs
Vigil/src/support/: cli.rs  config.rs  diag.rs  mod.rs  win.rs
Vigil/src/telemetry/: etw.rs  mod.rs
Vigil/src/trust/: api.rs  mod.rs  process.rs  wintrust.rs
Vigil/windows/: vigil.manifest
src/: alerts.rs  cli.rs  config.rs  engine.rs  etw.rs  handles.rs  main.rs  notify.rs  paths.rs  process.rs  sigcheck.rs
tests/data_access_test/: Cargo.toml
tests/data_access_test/src/: main.rs
