[package]
name = "titan_vigil"
version = "0.1.0"
edition = "2024"
authors = ["dutchpsycho", "TITAN Softwork Solutions"]
repository = "https://github.com/TITAN-Softwork-Solutions/Vigil"
license = "AGPL-3"

[[bin]]
name = "tssvigil"
path = "src/main.rs"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_System",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_Etw",
    "Win32_Security",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_UI_Controls",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
    "Data",
    "Data_Xml",
    "UI",
    "UI_Notifications",
    "Data_Xml_Dom",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Time",
    "Win32_Graphics_Gdi"
] }
anyhow = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.9.11+spec-1.1.0"
serde_json = "1.0.149"

[build-dependencies]
winres = "0.1"

[profile.dev]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"
